--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -23,12 +23,25 @@
     <section id="grid" class="grid grid-4" aria-label="Catálogo de servicios"></section>
   </main>
 
-  <footer class="footer" role="contentinfo">
-    <strong>TechNova Solutions</strong><div class="spacer"></div>
-    <a class="link" href="index.html">inicio</a>
-    <a class="link" href="servicios.html">Servicios</a>
-    <span class="chip">in</span><span class="chip">X</span><span class="chip">W</span>
-  </footer>
+    <footer class="footer" role="contentinfo">
+        <strong>TechNova Solutions</strong>
+        <div class="spacer"></div>
+
+        <a class="link" href="index.html">inicio</a>
+        <a class="link" href="servicios.html">Servicios</a>
+
+        <div class="socials">
+            <a class="chip" href="" aria-label="LinkedIn" target="_blank" rel="noopener">
+            <img src="../assets/icons/linkedin.png" alt="">
+            </a>
+            <a class="chip" href="" aria-label="X" target="_blank" rel="noopener">
+            <img src="../assets/icons/twitter.png" alt="">
+            </a>
+            <a class="chip" href="" aria-label="WhatsApp" target="_blank" rel="noopener">
+            <img src="../assets/icons/whatsapp.png" alt="">
+            </a>
+        </div>
+    </footer>
 
   <script src="../js/data.js"></script>
   <script>
