Indentación del código
Organización de detalles y cargué de iconos pendientes.

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>TechNova | Inicio</title>
+    <title>TechNova | Inicio © F1-G16</title>
     <link rel="stylesheet" href="../assets/technova.css">
 </head>
 <body>
@@ -19,14 +19,14 @@
     </header>
 
     <main class="container">
-    <section class="hero card">
-        <h1>Innovación para tu futuro digital</h1>
-        <p class="small">Creamos soluciones tecnológicas a la medida</p>
-        <div class="cta"><a class="btn" href="servicios.html">Ver servicios</a></div>
-    </section>
+        <section class="hero card">
+            <h1>Innovación para tu futuro digital</h1>
+            <p class="small">Creamos soluciones tecnológicas a la medida</p>
+            <div class="cta"><a class="btn" href="servicios.html">Ver servicios</a></div>
+        </section>
 
-    <h2>Servicios</h2>
-    <section id="destacados" class="grid grid-3" aria-label="Servicios destacados"></section>
+        <h2>Servicios</h2>
+        <section id="destacados" class="grid grid-3" aria-label="Servicios destacados"></section>
     </main>
 
     <footer class="footer" role="contentinfo">
@@ -38,13 +38,13 @@
 
         <div class="socials">
             <a class="chip" href="" aria-label="LinkedIn" target="_blank" rel="noopener">
-            <img src="../assets/icons/linkedin.png" alt="">
+                <img src="../assets/icons/linkedin.png" alt="">
             </a>
             <a class="chip" href="" aria-label="X" target="_blank" rel="noopener">
-            <img src="../assets/icons/twitter.png" alt="">
+                <img src="../assets/icons/twitter.png" alt="">
             </a>
             <a class="chip" href="" aria-label="WhatsApp" target="_blank" rel="noopener">
-            <img src="../assets/icons/whatsapp.png" alt="">
+                <img src="../assets/icons/whatsapp.png" alt="">
             </a>
         </div>
     </footer>
